# qcva-app

./: .graphqlrc.yml  package.json
client/: .gitignore  app.json  package.json  tailwind.config.js
client/app/: _layout.tsx
client/app/(screens)/: _layout.tsx  customers.tsx  history.tsx  inventory.tsx
client/app/(screens)/inventory/: _layout.tsx  index.tsx  pole.tsx
client/app/(screens)/inventory/pole/: [poleId].tsx  new.tsx
client/app/(screens)/inventory/poleDetails/: index.tsx
client/app/(tabs)/: index.tsx
client/components/: CustomerTable.tsx  DataTable.tsx  InventoryTable.tsx  LengthPicker.tsx  PoleForm.tsx  QueryTable.tsx  TextInputError.tsx
client/components/QueryTable/: CustomerTable.tsx  InventoryTable.tsx  index.tsx
client/components/Tables/: CustomerTable.tsx  HistoryTable.tsx  InventoryTable.tsx
client/components/nav/: NavDrawer.tsx  index.tsx
client/constants/: NavRoutes.ts  Poles.ts  Tables.ts  Uri.ts
client/utils/: dates.ts  decimal.ts  queryDocuments.ts  tables.ts  validation.tsx
graphql/: codegen.ts  package.json
graphql/documents/: orders.graphql  poles.graphql  users.graphql
graphql/schema/: schema.graphql
scripts/create_seed_data/: create_seed_data.py  pyproject.toml
scripts/create_seed_data/models/: models.py
scripts/create_seed_data/parsers/: customer.py  order.py  pole.py  pole_rate.py
server/: .gitignore  package.json  tsconfig.json
server/prisma/: schema.prisma  seed.ts
server/prisma/dbml/: schema.dbml
server/prisma/migrations/20240316030836_init/: migration.sql
server/src/: index.ts
