[tool.poetry]
name = "create-seed-data"
version = "0.1.0"
description = ""
authors = ["Nick Lay <layns@mail.uc.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
openpyxl = "^3.1.2"
pydantic = "^2.6.3"
ujson = "^5.9.0"
cuid2 = "^2.0.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
ruff = "^0.3.0"
pandas-stubs = "^2.2.0.240218"
black = "^24.2.0"
types-ujson = "^5.9.0.0"

[tool.black]
line-length = 119

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
